--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <div id="main-box">
+        <h1 id="title-text">Halo Trivia!</h1>
+        <div id="game-box">
+            <div id="main-menu-button">
+                <h3>Start</h3>
+            </div>
+        </div>
+    </div>
     <script src="./assets/javascript/app.js"></script>
 </body>
 </html>
