added: more functions for intervals and timeouts

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <div id="main-box">
         <h1 id="title-text">Halo Trivia!</h1>
         <div id="game-box">
-            <div id="main-menu-button">
-                <h3>Start</h3>
-            </div>
+            <button id="main-menu-button" class="button">Start</button>
         </div>
     </div>
     <script src="./assets/javascript/app.js"></script>
