added: style to the text removed big ugly grey box added transperent grey box

--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trivia</title>
+    <link href="https://fonts.googleapis.com/css?family=Stalinist+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <div id="main-box">
         <h1 id="title-text">Halo Trivia!</h1>
         <div id="game-box">
+            <h3 class="game-box-text">Welcome! Press Start to begin!</h3>
             <button id="main-menu-button" class="button">Start</button>
         </div>
     </div>
     <script src="./assets/javascript/app.js"></script>
 </body>
 </html>
+<!-- <h3 id="time-remaining" class="game-box-text">Time Remaining: 0 Seconds</h3>
+<h3 id="question" class="game-box-text">Out of Time!</h3>
+<h3 id="answer" class="game-answer-text">the correct answer was: floopin</h3>
+<img src="https://media.giphy.com/media/YcTBVh0Nxfc3u/giphy.gif"> -->
+<!-- 
+<h3 id="time-remaining" class="game-box-text">Time Remaining: 15 Seconds</h3>
+<h3 id="question" class="game-box-text">How many lines of dialogue did halo 3 have? How many lines of dialogue did halo 3 have? How many lines of dialogue did halo 3 have?</h3>
+<button id="main-menu-button" class="button">Start</button><br>
+<button id="main-menu-button" class="button">Start</button><br>
+<button id="main-menu-button" class="button">Start</button><br>
+<button id="main-menu-button" class="button">Start</button> -->
